--- a/calculator.html
+++ b/calculator.html
@@ -23,7 +23,7 @@
                     <input type="button" value="7" onclick="calc.display.value += '7'">
                     <input type="button" value="8" onclick="calc.display.value += '8'">
                     <input type="button" value="9" onclick="calc.display.value += '9'">
-                    <input type="button" value="" onclick="calc.display.value += ''">
+                    <input type="button" value="*" onclick="calc.display.value += '*'">
                 </div>
                 <div>
                     <input type="button" value="4" onclick="calc.display.value += '4'">
